[project]
name = "audio-similarity-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
[[tool.uv.index]]
name = "artifactory"
url = "https://us-artifactory.apps.ge-healthcare.net/artifactory/api/pypi/pypi-ext/simple"
